@@ -2,7 +2,7 @@
 Hash: SHA1,SHA512
 
 634071380936e4893b0e8cacdfcd344638406575    171 AUTHORS
-bbe30a2fead79e639cf944411863b575c01b9001  10246 ChangeLog
+e0ae0a49ef52b05115eb4b25b36ab178d66ccb96  10302 ChangeLog
 0beb31ee37259edeb621d345db933f2c827b2a21     22 Makefile.am
 19e4d83532a090725397743df31fc6b53aec945d  23259 Makefile.in
 04dc937708d52f3b9b6f9a096898c5e23fb80ace   2071 README
@@ -128,9 +128,9 @@ aeceb68b50e86a97097604479af0c7c255b1a481   8649 src/callback.c
 ae0a6de60aa502b38ddcff3241998918ff81f438   6715 src/emacs.c
 24279f8befe55dce2157382398c97c0040dcb3ac    956 src/emacs.h
 c3d84301cd67dcfd7396f60355f54f7c00945dbd  11332 src/encoding.c
-6f7d53179676cfa352482a630f1d796a3a00f80c   1422 src/encoding.h
-5a59dd16fa54af326b06214c6587edefa95ef317   7716 src/file.c
-5b9bcf1c3166b288777f78138278b843a22f6c28   1333 src/file.h
+00ecfbef1b59fb80b5204359cdd11be31c32ac5b   1370 src/encoding.h
+ecea3b48efd0936acf24442c9818d13df0c65a57   7742 src/file.c
+1bdf2813b89470cd1ce3b44caee7ea1bcdd077e9   1304 src/file.h
 3fad59e8f43d96d6c45241c4697846bab6cc2e1a   2119 src/font.c
 245c0fbc1d931b75e256e1410eeab2a12b56f75e    996 src/font.h
 366e0f7b367e8269fdb71211b0bbc2f8a6be24d7   6891 src/gtkprint.c
@@ -141,8 +141,8 @@ f6b21adcfc00151deba02a4339ea5883a7b8f411   2486 src/hlight.c
 828e51d43aaa64cbaa492baf761d053bba6b02dd   1019 src/hlight.h
 65d41180e4ad4ffc8e15910f64cd1c659bc30aa2   6774 src/indent.c
 bb2a52d5a1969da5a312b91bbba32d0489a48871   1334 src/indent.h
-ff7c1d2ca41ece6cf4115bc1c527d13a7d11e20c   3699 src/l3afpad.h
-5c7f1b15d14250641334d67af6768c6b66ae9450   7420 src/linenum.c
+83afa48dba9064a78aadda8a4fcc6044c4d3e850   3693 src/l3afpad.h
+3a7e892161aa9ceb16fcc32f6f21a0a7e4735e64   7607 src/linenum.c
 6f63e2c07f844c7ba97c77d3e7234d30560a09f0    983 src/linenum.h
 5451aa9d991c54e57f2a23492830050320321f5a   8319 src/main.c
 3c0259eda7028cfa574c29674235f5109f90526a   8751 src/menu.c
@@ -154,25 +154,25 @@ cee72ed3fd94d1637021e9c73602f109f7af06d1   1054 src/search.h
 609fd713cef54955274804dadd59d51fbc3e7aa4  10743 src/undo.c
 13e3a08982c1aee8ea5bedb3e76ac33f3f161290   1211 src/undo.h
 26918883912f5f087e467d6ea8620db316cd9512   4155 src/utils.c
-cd4f957aa8207021b04882574ecd1720b5069457   1166 src/utils.h
+cc1d02de6eb5f85c69ef6f33cbe072ee8467706a   1116 src/utils.h
 3e9703e4eee527e8db4b082aa4aa2eeb158e111b  11206 src/view.c
 f9797a035a29fe5e6f1137d20fb916c573bd1bea   1276 src/view.h
 bf524e4de2a68901495a91d181cf3573edd3027b   2532 src/window.c
 75d1c79bfdd24b7ae5450ead4aef3ab43267e85f   1068 src/window.h
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk9B540ACgkQdEpXpumNYVkNAwCgkRo2+sD4CjNbWB05ISlxQfBS
-UoIAoIMNsbGY6b+POUEBZsAogpTVpxM+iQIcBAEBCgAGBQJPQeeNAAoJELc3H0m+
-i6gZ0eUP/iX58BaJj+pnq0B8HIw1kn5FiT3am40ysZ9Y2gl0KF67d8ooGwP3GQjO
-4XEm9JYLhPQL0W18D8NJQxpgSaU8NI31v8dL9Ffp6p13soT6kyxCqPkeucu7okL+
-F/JGZEIR/DVCP4vWNJ3T5mhxUorKu/GLnlwQn+JKKey0DQDvGjO9W72c37kQrNdl
-voo7H9dDy6nkzhsPItW93KFwrIizfQDZWLisSBVmQL8ZJY768chv9XZs6NO0pGHv
-nZpSKK2zntuLjiAQ8Kb0wFIeoYgasr7sjtMtGahpeX8KKK9PqpXdLo++vIHAgozU
-DV3PY9nTCn7iKBsFd6zCbXgo9J/9dOcAiMi66JFgki5II8hJqmbmwy4Nu6uDhSc5
-g970R0iIuf/Tkjkm1s8P08vQZIos0Y6cSHmRxnZpbKbnGo12JHuoxEu0BTM85bip
-QMcQI7EVclV9tJPDDRHgtuhcTEihuIKShPFYxZ8UJiEIB44PN9D15CzCO5kiSahB
-fv5QSk4YnC0i01hYKsXz1KOln3q2OD4oW4I5HVfDhkehGNBB5QSK3rH6DQB3Qens
-/VHntd62kuItgIDC0+Nm/d0rEZ/0TUwmpul9BS0do30qokjz5oOkb+2sUk5v2dH4
-DNy8ZtC44urqxh3iUUtMv4th9rYQ1r2h3tkkfrzT9z/zcaE4U8yo
-=yTvV
+iEYEARECAAYFAk9B6AQACgkQdEpXpumNYVl9OQCeOij+LF9kN+oYYicYuUbdUfiC
+3DYAn2q9XJqp7czsEiO+oV48IRmA6d+aiQIcBAEBCgAGBQJPQegEAAoJELc3H0m+
+i6gZm/gP/Ash1ou3+Iosz9CRiNDejSt4YnnCMuVXbM/YRZ95CAgAehNse4dv4aQg
+sAplXPM3oqUBv65nUUmV/7MB/GrRO6VfbZwFGYPFRHN6zlljW5koyFC0jOjH1tO+
+awkaLsEWzjZxy+kZEO2i3VXEYCHbizkZVv7K1fvqZT8yEzR0EQx++FFCFen7Pi/A
+him7XzKErmGWK8g0x1qfHp8oDU3LJKgZkvuuVFUXHlXu/NfCETcZLXuyncCIkPGF
+amiXRRn/IpExMLR3PMwMk7ghuUaVqSH36XT+vH5yzS+QD0GIjiNQwdZNL22eMY4b
+uu95Q5VHSt8Favztt/R3U8TSzC1hVxWi+GqjEnzWIDRMBP3GefifsG9c9wVNyDVB
+wnER2rDCcXUPzDDrKht+JVaAVNUnpSSldMzxn9wlSGZo1b29LXctpAgWIEcNoHS6
+iXJnvC/UPsyvtmVvOS+51RSfUQFOKdvKpz9N3/0ed2hpnsf9Th03B1bhDzq8ZWsr
+AbKlOrp+MenSovr3xZ6Thnm/+EJ9tM+yNihu5ifOHGD0mMLvw7miMj26br3tp69F
+nogNnBZF2Privy6afEJ2d9H/Wog4mLKjSMktjEAb5nf6+c0+kh6l5ODwr4XK3OTL
++cdjoYRrs6td9QzgIh6il6l7TquCdlzkxt+Bl3LRe7KtUcNZqreC
+=aiFa
 -----END PGP SIGNATURE-----
